Found an error on mobile that if you to the certifications/projects section the cards overlap the navbar, fixed.

--- a/about.css
+++ b/about.css
@@ -15,6 +15,7 @@ li:hover {
 nav.navbar {
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
 
 #img:hover {
