--- a/home.css
+++ b/home.css
@@ -10,6 +10,7 @@ ul {
 nav.navbar {
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
 
 li:hover {
