--- a/projects.css
+++ b/projects.css
@@ -14,6 +14,7 @@ li:hover {
 nav.navbar {
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
 
 .contacts-section {
